Updated domain model, tests and refactored everything. Core Completed